--- a/VS-Code/extensions/pro-editor/language-configuration.json
+++ b/VS-Code/extensions/pro-editor/language-configuration.json
@@ -2,28 +2,10 @@
     "comments": {
         "lineComment": "! "
     },
-    "brackets": [
-        ["{", "}"],
-        ["[", "]"],
-        ["(", ")"]
-    ],
-    "autoClosingPairs": [
-        ["{", "}"],
-        ["[", "]"],
-        ["(", ")"],
-        { "open": "\"", "close": "\"", "notIn": ["string"] }
-    ],
-    "surroundingPairs": [
-        ["{", "}"],
-        ["[", "]"],
-        ["(", ")"],
-        ["%", "%"],
-        ["\"", "\""]
-    ],
     "folding": {
         "markers": {
-            "start": "^\\s*(! |!)\\s*#region",
-            "end": "^\\s*(! |!)\\s*#endregion"
+            "start": "mapkey\\s\\S+",
+            "end": "\\;\\\\"
         }
     }
 }
