--- a/VS-Code/extensions/pro-editor/package.json
+++ b/VS-Code/extensions/pro-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PRO/Editor",
-  "version": "0.0.1",
+  "version": "8.0.3",
   "icon": "./creo-parametric-logo.png",
   "engines": {
     "vscode": ">=0.9.0-pre.1"
@@ -11,7 +11,7 @@
       {
         "id": "pro-editor",
         "aliases": ["PRO/Editor"],
-        "extensions": [".pro",".sup"],
+        "extensions": [".pro",".sup",".dtl"],
         "configuration": "./language-configuration.json"
       }
     ],
