--- a/VS-Code/extensions/pro-editor.vscode-language-8.0.3/package.json
+++ b/VS-Code/extensions/pro-editor.vscode-language-8.0.3/package.json
@@ -1,11 +1,11 @@
 {
   "name": "PRO/Editor",
+  "publisher": "Aniceto Moreno Jr",
   "version": "8.0.3",
   "icon": "./creo-parametric-logo.png",
   "engines": {
     "vscode": ">=0.9.0-pre.1"
   },
-  "publisher": "Aniceto Moreno Jr",
   "contributes": {
     "languages": [
       {
@@ -21,6 +21,10 @@
         "scopeName": "source.pro-editor",
         "path": "./syntaxes/pro-editor.tmlanguage.json"
       }
-    ]
+    ],
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/amorenojr/Creo-Parametric/tree/main/VS-Code/extensions/pro-editor.vscode-language-8.0.3"
+    }
   }
 }
