--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/amorenojr/Creo-Parametric/tree/main/VS-Code/extensions/pro-editor.vscode-language-8.0.3.git"
+    "url": "https://github.com/amorenojr/Pro-Editor"
   },
   "contributes": {
     "languages": [
