--- a/language-configuration-pro-relations.json
+++ b/language-configuration-pro-relations.json
@@ -2,6 +2,9 @@
     "comments": {
         "lineComment": "/*"
     },
+    "brackets": [
+        ["(",")"]
+    ],
     "folding": {
         "markers": {
             "start": "",
