--- a/language-configuration-pro-relations.json
+++ b/language-configuration-pro-relations.json
@@ -13,6 +13,14 @@
         {"open":"\"", "close":"\"", "notIn": ["string"]},
         {"open":"`", "close":"`", "notIn": ["string","comment"]}
     ],
+    "surroundingPairs": [
+        ["{","}"],
+        ["[","]"],
+        ["(",")"],
+        ["'","'"],
+        ["\"","\""],
+        ["`","`"]
+    ],
     "folding": {
         "markers": {
             "start": "",
