--- a/language-configuration-pro-relations.json
+++ b/language-configuration-pro-relations.json
@@ -23,8 +23,8 @@
     ],
     "folding": {
         "markers": {
-            "start": "",
-            "end": ""
+            "start": "^\\/\\*\\s*#region\\b",
+            "end": "^\\/\\*\\s*#endregion\\b"
         }
     }
 }
