Added `brackets`,`autoClosingPairs`, and `surroundingPairs`

--- a/language-configuration-pro-psf.json
+++ b/language-configuration-pro-psf.json
@@ -2,6 +2,19 @@
     "comments": {
         "lineComment": "//"
     },
+    "brackets": [
+        ["(",")"]
+    ],
+    "autoClosingPairs": [
+        {"open":"(", "close":")"},
+        {"open":"'", "close":"'", "notIn": ["string"]},
+        {"open":"\"", "close":"\"", "notIn": ["string"]}
+    ],
+    "surroundingPairs": [
+        ["(",")"],
+        ["'","'"],
+        ["\"","\""]
+    ],
     "folding": {
         "markers": {
             "start": "",
