--- a/language-configuration-pro-relations.json
+++ b/language-configuration-pro-relations.json
@@ -3,15 +3,16 @@
         "lineComment": "/*"
     },
     "brackets": [
-        ["(",")"]
+        ["(",")"],
+        ["[","]"]
     ],
     "autoClosingPairs": [
         {"open":"{", "close":"}"},
         {"open":"[", "close":"]"},
         {"open":"(", "close":")"},
-        {"open":"'", "close":"'", "notIn": ["string","comment"]},
+        {"open":"'", "close":"'", "notIn": ["string"]},
         {"open":"\"", "close":"\"", "notIn": ["string"]},
-        {"open":"`", "close":"`", "notIn": ["string","comment"]}
+        {"open":"`", "close":"`", "notIn": ["string"]}
     ],
     "surroundingPairs": [
         ["{","}"],
